--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "2       WD        Normal     223500  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
        "max      12.000000  2010.000000  755000.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1450,14 +1450,18 @@
     "Para abordar el problema con estas columnas podriamos:\n",
     "\n",
     "* Imputar con una mediana central, como la mediana, para valores numéricos: (LotFrontage, MasVnrArea).\n",
-    "* Imputar el valor más frecuente o una categoría especial para valores categóricos (MasVnrType, Electrical, etc)."
+    "* Imputar el valor más frecuente o una categoría especial para valores categóricos (MasVnrType, Electrical, etc).\n",
+    "\n",
+    "**Columna 'FireplaceQu' (Casi el 50% de valores nulos):**\n",
+    "\n",
+    "Para esta columna también vamos a trabajar una técnica de imputacion igual a la que vamos a realizar en las variables de garage."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trabajamos las columnas con menos del 10% de valores faltantes."
+    "### Trabajamos las columnas con menos del 10% de valores faltantes y la columna 'FireplaceQu'."
    ]
   },
   {
@@ -1469,11 +1473,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Imputación de 'LotFrontage' usando la mediana por 'Neighborhood'.\n",
+    "# Imputación de 'LotFrontage' usando la mediana por 'Neighborhood'.\n",
     "train_data['LotFrontage'] = train_data.groupby('Neighborhood')['LotFrontage'].transform(\n",
     "    lambda x: x.fillna(x.median())\n",
     ")"
@@ -1492,11 +1496,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Imputación de 'MasVnrType' y 'MasVnrArea'.\n",
+    "# Imputación de 'MasVnrType' y 'MasVnrArea'.\n",
     "train_data['MasVnrType'] = train_data['MasVnrType'].fillna('None')\n",
     "train_data['MasVnrArea'] = train_data['MasVnrArea'].fillna(0)"
    ]
@@ -1512,11 +1516,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Imputación de características del sótano: 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2'\n",
+    "# Imputación de características del sótano: 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2'\n",
     "caracteristicas_sotano = ['BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2']\n",
     "\n",
     "for caracteristica in caracteristicas_sotano:\n",
@@ -1532,11 +1536,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Imputación de 'Electrical' usando la moda.\n",
+    "# Imputación de 'Electrical' usando la moda.\n",
     "train_data['Electrical'] = train_data['Electrical'].fillna(train_data['Electrical'].mode()[0])"
    ]
   },
@@ -1544,7 +1548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por último, las columnas 'GarageType', 'GarageYrBlt', 'GarageFinish', 'GarageQual', 'GarageCond' están relacionadas con el garaje y, como con el sótano, los valores nulos nos indican que la casa no posee garage.\n",
+    "Las columnas 'GarageType', 'GarageYrBlt', 'GarageFinish', 'GarageQual', 'GarageCond' están relacionadas con el garaje y, como con el sótano, los valores nulos nos indican que la casa no posee garage.\n",
     "\n",
     "En **GarageType**, **GarageFinish**, **GarageQual**, **GarageCond**, vamos a imputar 'No Garage' para indicar que la casa no tiene garage.\n",
     "\n",
@@ -1553,11 +1557,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. Imputación de características del garage: 'GarageType', 'GarageYrBlt', 'GarageFinish', 'GarageQual', 'GarageCond'\n",
+    "# Imputación de características del garage: 'GarageType', 'GarageYrBlt', 'GarageFinish', 'GarageQual', 'GarageCond'\n",
     "caracteristicas_garage = ['GarageType', 'GarageFinish', 'GarageQual', 'GarageCond']\n",
     "for caracteristica in caracteristicas_garage:\n",
     "    train_data[caracteristica] = train_data[caracteristica].fillna('No Garage')"
@@ -1565,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,12 +1581,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como lo hicimos anteriormente, mostramos solo las columnas con valores nulos y el número de valores faltantes."
+    "Como hicimos anteriormente con las variables del garage, para trabajar **FireplaceQu** vamos a imputar 'No Fire Place' para indicar que la casa no tiene chimenea."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imputación en la columna 'FireplaceQu'.\n",
+    "train_data['FireplaceQu'] = train_data['FireplaceQu'].fillna('No Fire Place')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por último, mostramos solo las columnas con valores nulos y el número de valores faltantes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1590,7 +1611,6 @@
      "output_type": "stream",
      "text": [
       "Alley          1369\n",
-      "FireplaceQu     690\n",
       "PoolQC         1453\n",
       "Fence          1179\n",
       "MiscFeature    1406\n",
@@ -1618,6 +1638,319 @@
    "source": [
     "### Trabajamos las columnas con más del 50% de valores faltantes."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las columnas 'Alley', 'PoolQC', 'Fence', y 'MiscFeature' tienen más del 80% de datos faltantes. Aunque alguna podría aportar buena información al modelo, vamos a eliminarlas por la cantidad significativa de datos faltantes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminamos las columnas 'Alley', 'PoolQC', 'Fence', y 'MiscFeature'.\n",
+    "columnas_drop = ['Alley', 'PoolQC', 'Fence', 'MiscFeature']\n",
+    "train_data = train_data.drop(columns = columnas_drop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verificamos que ya no hayan valores faltantes en el dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series([], dtype: int64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "columnas_nulas = train_data.isnull().sum()\n",
+    "columnas_nulas = columnas_nulas[columnas_nulas > 0]\n",
+    "\n",
+    "print(columnas_nulas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Categóricas a numéricas.\n",
+    "\n",
+    "Ahora que nuestro dataset no tiene valores faltantes, vamos a analizar que columnas categóricas son importantes para el entrenamiento del modelo para convertirlas a columnas numéricas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columnas categóricas: \n",
+      "Index(['MSZoning', 'Street', 'Alley', 'LotShape', 'LandContour', 'Utilities',\n",
+      "       'LotConfig', 'LandSlope', 'Neighborhood', 'Condition1', 'Condition2',\n",
+      "       'BldgType', 'HouseStyle', 'RoofStyle', 'RoofMatl', 'Exterior1st',\n",
+      "       'Exterior2nd', 'MasVnrType', 'ExterQual', 'ExterCond', 'Foundation',\n",
+      "       'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2',\n",
+      "       'Heating', 'HeatingQC', 'CentralAir', 'Electrical', 'KitchenQual',\n",
+      "       'Functional', 'FireplaceQu', 'GarageType', 'GarageFinish', 'GarageQual',\n",
+      "       'GarageCond', 'PavedDrive', 'PoolQC', 'Fence', 'MiscFeature',\n",
+      "       'SaleType', 'SaleCondition'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "Columnas numéricas: \n",
+      "Index(['Id', 'MSSubClass', 'LotFrontage', 'LotArea', 'OverallQual',\n",
+      "       'OverallCond', 'YearBuilt', 'YearRemodAdd', 'MasVnrArea', 'BsmtFinSF1',\n",
+      "       'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', '1stFlrSF', '2ndFlrSF',\n",
+      "       'LowQualFinSF', 'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath',\n",
+      "       'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'TotRmsAbvGrd',\n",
+      "       'Fireplaces', 'GarageYrBlt', 'GarageCars', 'GarageArea', 'WoodDeckSF',\n",
+      "       'OpenPorchSF', 'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea',\n",
+      "       'MiscVal', 'MoSold', 'YrSold', 'SalePrice'],\n",
+      "      dtype='object')\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Volvemos a ver las columnas categóricas y numéricas con las variables creadas anteriormente.\n",
+    "print(f'Columnas categóricas: \\n{columnas_categoricas}\\n')\n",
+    "print(f'Columnas numéricas: \\n{columnas_numericas}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Vemos que las columnas que eliminamos en la etapa de **Valores nulos** ya no estan.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las columnas como 'ExterQual', 'BsmtQual', 'HeatingQC' y otras describen la calidad o condición de los aspectos de las viviendas (por ejemplo, la calidad de la cocina o del sótano)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores de ExterQual:\n",
+      "ExterQual\n",
+      "TA    906\n",
+      "Gd    488\n",
+      "Ex     52\n",
+      "Fa     14\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores de BsmtQual:\n",
+      "BsmtQual\n",
+      "TA             649\n",
+      "Gd             618\n",
+      "Ex             121\n",
+      "No Basement     37\n",
+      "Fa              35\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores de HeatingQC:\n",
+      "HeatingQC\n",
+      "Ex    741\n",
+      "TA    428\n",
+      "Gd    241\n",
+      "Fa     49\n",
+      "Po      1\n",
+      "Name: count, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in ['ExterQual', 'BsmtQual', 'HeatingQC']:\n",
+    "    print(f\"Valores de {col}:\")\n",
+    "    print(train_data[col].value_counts())\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Estas columnas tienen valores como 'Ex', 'Gd', 'TA', entre otros, que indican diferentes niveles de calidad. Para convertirlos a valores numéricos, asignamos un número a cada nivel de calidad, en donde el valor más alto representa la mejor calidad."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mapeo general para columnas de calidad y condición.\n",
+    "mapeo_calidad = {'Ex': 5, 'Gd': 4, 'TA': 3, 'Fa': 2, 'Po': 1, 'No Fire Place': 0, 'No Garage': 0, 'No Basement': 0}\n",
+    "\n",
+    "# Asignamos el mapeo general a columnas relacionadas con calidad y condición.\n",
+    "columnas_calidad = ['ExterQual', 'ExterCond', 'BsmtQual', 'BsmtCond', 'HeatingQC', 'KitchenQual', \n",
+    "                    'FireplaceQu', 'GarageQual', 'GarageCond']\n",
+    "\n",
+    "for col in columnas_calidad:\n",
+    "    train_data[col] = train_data[col].map(mapeo_calidad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hacemos un mapeo específico para las columnas que no usan 'mapeo_calidad'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores de BsmtExposure:\n",
+      "BsmtExposure\n",
+      "No             953\n",
+      "Av             221\n",
+      "Gd             134\n",
+      "Mn             114\n",
+      "No Basement     38\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores de BsmtFinType1:\n",
+      "BsmtFinType1\n",
+      "Unf            430\n",
+      "GLQ            418\n",
+      "ALQ            220\n",
+      "BLQ            148\n",
+      "Rec            133\n",
+      "LwQ             74\n",
+      "No Basement     37\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores de BsmtFinType2:\n",
+      "BsmtFinType2\n",
+      "Unf            1256\n",
+      "Rec              54\n",
+      "LwQ              46\n",
+      "No Basement      38\n",
+      "BLQ              33\n",
+      "ALQ              19\n",
+      "GLQ              14\n",
+      "Name: count, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in ['BsmtExposure', 'BsmtFinType1', 'BsmtFinType2']:\n",
+    "    print(f\"Valores de {col}:\")\n",
+    "    print(train_data[col].value_counts())\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores de GarageFinish:\n",
+      "GarageFinish\n",
+      "Unf          605\n",
+      "RFn          422\n",
+      "Fin          352\n",
+      "No Garage     81\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores de Functional:\n",
+      "Functional\n",
+      "Typ     1360\n",
+      "Min2      34\n",
+      "Min1      31\n",
+      "Mod       15\n",
+      "Maj1      14\n",
+      "Maj2       5\n",
+      "Sev        1\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores de PavedDrive:\n",
+      "PavedDrive\n",
+      "Y    1340\n",
+      "N      90\n",
+      "P      30\n",
+      "Name: count, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in ['GarageFinish', 'Functional', 'PavedDrive']:\n",
+    "    print(f\"Valores de {col}:\")\n",
+    "    print(train_data[col].value_counts())\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapeo_especifico = {\n",
+    "    'BsmtExposure': {'No Basement': 0, 'No': 1, 'Mn': 2, 'Av': 3, 'Gd': 4},\n",
+    "    'BsmtFinType1': {'No Basement': 0, 'Unf': 1, 'LwQ': 2, 'Rec': 3, 'BLQ': 4, 'ALQ': 5, 'GLQ': 6},\n",
+    "    'BsmtFinType2': {'No Basement': 0, 'Unf': 1, 'LwQ': 2, 'Rec': 3, 'BLQ': 4, 'ALQ': 5, 'GLQ': 6},\n",
+    "    'GarageFinish': {'No Garage': 0, 'Unf': 1, 'RFn': 2, 'Fin': 3},\n",
+    "    'Functional': {'Sal': 1, 'Sev': 2, 'Maj2': 3, 'Maj1': 4, 'Mod': 5, 'Min2': 6, 'Min1': 7, 'Typ': 8},\n",
+    "    'PavedDrive': {'N': 0, 'P': 1, 'Y': 2},\n",
+    "}\n",
+    "\n",
+    "for col, mapeo_e in mapeo_especifico.items():\n",
+    "    train_data[col] = train_data[col].map(mapeo_e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
